# moos-ivp-vsnt

./: .LastOpenedMOOSLogDirectory  README.md
missions/alder/: alder.bhv  alder.moos
missions/alder_orig/: alder.moos
missions/minex/: alfa.moos  alfa_sim.moos
missions/minex/teste_23_10_2023_____08_27_07/: alfa._bhv  teste_23_10_2023_____08_27_07._moos  teste_23_10_2023_____08_27_07.alog  teste_23_10_2023_____08_27_07.ylog
missions/minex/teste_23_10_2023_____08_35_45/: teste_23_10_2023_____08_35_45._moos  teste_23_10_2023_____08_35_45.alog  teste_23_10_2023_____08_35_45.ylog
missions/minex/teste_23_10_2023_____08_45_11/: teste_23_10_2023_____08_45_11._moos  teste_23_10_2023_____08_45_11.ylog
missions/minex/teste_23_10_2023_____08_45_11/teste_23_10_2023_____08_45_11_alvtmp/: DESIRED_HEADING.klog  DESIRED_SPEED.klog  MOOS_DEBUG.klog  NAV_HEADING.klog  NAV_LAT.klog  NAV_LONG.klog  NAV_SPEED.klog  summary.klog
missions/minex/teste_23_10_2023_____09_10_50/: teste_23_10_2023_____09_10_50._moos  teste_23_10_2023_____09_10_50.alog  teste_23_10_2023_____09_10_50.ylog
missions/minex/teste_23_10_2023_____12_54_30/: teste_23_10_2023_____12_54_30._moos  teste_23_10_2023_____12_54_30.alog  teste_23_10_2023_____12_54_30.ylog
missions/missao_padrao/: .LastOpenedMOOSLogDirectory  alfa.bhv  alfa.moos  alfa_sim.moos
missions/missao_padrao_lancha/: alfa.moos  launch.sh
missions/missao_padrao_lancha/teste_4_9_2023_____11_46_08/: alfa._bhv  teste_4_9_2023_____11_46_08._moos  teste_4_9_2023_____11_46_08.ylog
missions/missao_padrao_lancha/teste_4_9_2023_____14_16_55/: teste_4_9_2023_____14_16_55._moos  teste_4_9_2023_____14_16_55.alog  teste_4_9_2023_____14_16_55.ylog
missions/simpass/: pSimpass.ini  simpass.bhv  simpass.moos  simpass2.moos
missions/test_manXmoos/: .LastOpenedMOOSLogDirectory  alfa.bhv  alfa.moos  alfa_sim.moos
missions/teste1/: alder.bhv  alder.moos  alfa.bhv
scripts/PingPong/: ping.py  pong.py  simple_pingpong.moos
scripts/PlottingDecisions/: alpha.bhv  alpha.moos  plotter.py
src/: CMakeLists.txt
src/iDivisorNMEA/: DivisorNMEA.cpp
src/iSerial/: CMakeLists.txt  Serial.cpp  Serial.h  iSerial.moos
src/iSerialV23/: CMakeLists.txt  SerialV23.cpp  SerialV23_Info.cpp  iSerialV23.moos  main.cpp
src/lib/documentation/: MOOSAppDocumentation.h
src/pIMU/: IMU.cpp
src/pSimpass/: CMakeCache.txt  CMakeLists.txt  Console.cpp  Console.h  LatLong.cpp  LatLong.h  LatLong.inl  Makefile  MathUtils.cpp  MathUtils.h  NetworkClient.cpp  NetworkClient.h  NetworkManager.cpp  NetworkManager.h  README.md  SIMPASS.cpp  SIMPASS.h  Singleton.h  Singleton.inl  alpha.moos  cmake_install.cmake  main.cpp  moosconnect.cpp  moosconnect.h  pSimpass.ini  pSimpass.pro  pSimpass.pro.user.666e695.4.8-pre1  vsnt.moos
src/pSimpass/docs/: Simpass_x_Moos.xlsx  Variáveis MOOS-IvP.xlsx  comandos.txt  links lancha.txt
src/pSimpass/pSimpass_autogen/EWIEGA46WW/: moc_NetworkClient.cpp  moc_NetworkManager.cpp
src/planchaPID/: CMakeLists.txt  PIDParameterReader.cpp  PIDParameterReader.h  heading_pid_parameters.txt  heading_pid_parameters_minex.txt  lanchaPID.cpp  lanchaPID.h  lanchaPID_Info.cpp  lanchaPID_Info.h  main.cpp  planchaPID.moos  speed_pid_parameters.txt
